# cs438-game-engine

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
include/: Animation.h  BoxBody.h  BoxRigidBody.h  Collision.h  Controller.h  EventHandler.h  GameAction.h  GameObject.h  GameWindow.h  Handler.h  MainEngine.h  Map.h  MemoryManagement.h  RectStruct.h  Tile.h  UI.h  Util.h
src/: Animation.cpp  BoxRigidBody.cpp  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Controller.cpp  Controller.h  EventHandler.cpp  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  Handler.cpp  Main.cpp  MainEngine.cpp  MainEngine.h  Map.h  MemoryManagement.cpp  MemoryManagement.h  Tile.cpp  Tile.h  UI.cpp  UI.h  Util.cpp  Util.h  main.cpp  window.cpp  window.h
test/: CMakeLists.txt  Test_GameWindow.cpp  test_main.cpp
test/Animation_Test/: CMakeLists.txt  Test_Animation.cpp  Test_Cel.cpp
test/BoxRigidBody_Test/: CMakeLists.txt  Test_BoxRigidBody.cpp
test/Camera_Test/: CMakeLists.txt  Test_Camera.cpp
test/Collision_Test/: CMakeLists.txt  Test_Collision.cpp
test/Controller_Test/: CMakeLists.txt  Test_Controller.cpp
test/EventHandler_Test/: CMakeLists.txt  Test_EventHandler.cpp
test/GameObject_Test/: CMakeLists.txt  Test_GameObject.cpp
test/GameWindow_Test/: CMakeLists.txt  Test_GameWindow.cpp
test/Handler_Test/: CMakeLists.txt  Test_Handler.cpp
test/Map_Test/: CMakeLists.txt  Test_Map.cpp
test/MemoryManagement_Test/: CMakeLists.txt  Test_MemoryManagement.cpp
test/Tile_Test/: CMakeLists.txt  Test_Tile.cpp
test/UI_Test/: CMakeLists.txt  Test_UI.cpp
test/Util_Test/: CMakeLists.txt  Test_Util.cpp
